vlib/v/checker/tests/assign_expr_type_err_g.vv
fn main() {
	mut foo := true
	foo += false
	_ = foo
}
